    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used
    - added support for GM global device volume SysEx message
    - bugfix: notes triggered at position 0 in the audio buffer were
      sometimes wrongly killed in the same buffer, causing no sound to
      be played
    - added support for chromatic / drumkit mode Roland GS Sysex message
      which is usally used to switch a part between chromatic sounds and
      drumkit sounds (as opposed to their common default setting of MIDI
      part 10 being a drumkit part and all other ones chromatic parts), in
      LS however one can switch between the first 16 MIDI instrument maps
      defined for the sampler

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP event "DEVICE_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain MIDI input devices (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP commands: FIND LOST DB_INSTRUMENT_FILES and
      SET DB_INSTRUMENT FILE_PATH
    - bugfix: the bank number provided by MIDI_INSTRUMENT_INFO notifications
      was incorrect

  * Bug fixes:
    - fixed a crash which occurs when removing a sampler channel waiting
      to start instrument loading after another channel


Version 0.5.1 (6 December 2007)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)